Add top bar, nicer buttons and About section

--- a/app/views/words/edit.html.slim
+++ b/app/views/words/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing word
 
 == render 'form'
 
-= link_to 'Show', @word
-'|
-= link_to 'Back', words_path
+= link_to 'Show', @word, :class => 'small secondary button'
+' 
+= link_to 'Back', words_path, :class => 'small secondary button'
 
