--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,15 +9,25 @@ html lang="en"
   	/! Set the viewport width to device width for mobile
   	meta name="viewport" content="width=device-width, initial-scale=1.0"
 
-  	title = content_for?(:title) ? yield(:title) : "Untitled"
+  	title Kotoba no Purobaida
 
   	= stylesheet_link_tag "application"
   	= javascript_include_tag "vendor/custom.modernizr"
     = csrf_meta_tags
 
   body
+    nav.top-bar
+      ul.title-area
+        li.name
+          h1 
+            a href="#" Kotoba no Purobaida
+
     div.row
       div.large-8.columns = yield
-      div.large-4.columns = 'Sidebar'
+      div.large-4.columns
+        h2 About
+        p Watashi no Jisho / Kotoba no Purobaida is a personal dictionary project. Its goal is to provide you vocabulary cards, exercice sheets and multiple choice quizzes. The content is user built so you can focus on learning the words and expressions you already know.
+
+        p This platform is the application backend. Here you will enter the new words you have learned. In a second time, you can update the word list on the frontend and take some exercices. Both parts are made to work independently. The frontend will only refresh the word list when you ask to. That way, you don't always need a internet connection in order to practice.
 
     = javascript_include_tag "application"
