--- a/app/views/words/_form.html.slim
+++ b/app/views/words/_form.html.slim
@@ -24,4 +24,4 @@
   .field
     = f.label :tags
     = f.text_field :tags
-  .actions = f.submit 'Save'
+  .actions = f.submit 'Save', :class => 'small button'
