--- a/app/views/words/show.html.slim
+++ b/app/views/words/show.html.slim
@@ -1,24 +1,24 @@
 p#notice = notice
 
 p
-  strong English:
+  strong English: 
   = @word.english
 p
-  strong French:
+  strong French: 
   = @word.french
 p
-  strong Hiragana:
+  strong Hiragana: 
   = @word.hiragana
 p
-  strong Katakana:
+  strong Katakana: 
   = @word.katakana
 p
-  strong Kanji:
+  strong Kanji: 
   = @word.kanji
 p
-  strong Tags:
+  strong Tags: 
   = @word.tags
 
-= link_to 'Edit', edit_word_path(@word)
-'|
-= link_to 'Back', words_path
+= link_to 'Edit', edit_word_path(@word), :class => 'small secondary button'
+' 
+= link_to 'Back', words_path, :class => 'small secondary button'
