Implement tags + improve show view

--- a/app/views/words/_form.html.slim
+++ b/app/views/words/_form.html.slim
@@ -23,5 +23,5 @@
     = f.text_field :kanji
   .field
     = f.label :tags
-    = f.text_field :tags
+    = f.text_field :tags_list
   .actions = f.submit 'Save', :class => 'small button'
