Add Devise and create db seed file

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,6 +23,8 @@ html lang="en"
             a href="#" Kotoba no Purobaida
 
     div.row
+      - if notice
+        div#notice.alert-box = notice
       = yield
 
     = javascript_include_tag "application"
