--- a/app/views/tags/index.html.slim
+++ b/app/views/tags/index.html.slim
@@ -15,7 +15,7 @@ div.large-8.columns
         td = tag.count
         td = link_to 'Show', tag
         td = link_to 'Edit', edit_tag_path(tag)
-        td = link_to 'Destroy', tag, :confirm => 'Are you sure?', :method => :delete
+        td = link_to 'Destroy', tag, data: { confirm: 'Are you sure?' }, :method => :delete
 
   br
 
