Add extra parameter to user + start Rspecs

--- a/app/views/tags/edit.html.slim
+++ b/app/views/tags/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing tag
 
 == render 'form'
 
-= link_to 'Show', @tag
-'|
-= link_to 'Back', tags_path
+= link_to 'Show', @tag, :class => 'small secondary button'
+' 
+= link_to 'Back', tags_path, :class => 'small secondary button'
 
