--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,7 +1,7 @@
+= devise_error_messages!
 h2 Edit #{resource_name.to_s.humanize}
 
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = devise_error_messages!
 
   div
     = f.label :email
@@ -10,6 +10,11 @@ h2 Edit #{resource_name.to_s.humanize}
 
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     div Currently waiting confirmation for: #{resource.unconfirmed_email}
+
+  div
+    = f.label :name
+    br
+    = f.text_field :name
 
   div
     = f.label :password
@@ -37,4 +42,4 @@ h3 Cancel my account
 
 p Unhappy? #{button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'small button alert'}
 
-= link_to "Back", :back
+= link_to "Back", :back, :class => 'secondary small button'
