--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,7 +1,7 @@
+= devise_error_messages!
 h2 Sign up
 
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
 
   div
     = f.label :email
@@ -17,6 +17,11 @@ h2 Sign up
     = f.label :password_confirmation
     br
     = f.password_field :password_confirmation
+
+  div
+    = f.label :name
+    br
+    = f.text_field :name
 
   div
     = f.submit "Sign up", :class => 'small button'
