--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,6 +24,8 @@ html lang="en"
       section.top-bar-section
         ul.right
           li
+            = link_to('Profile', edit_user_registration_path)
+          li
             = link_to('Logout', destroy_user_session_path, :method => :delete)
         ul.left
           li
