--- a/app/views/tags/_form.html.slim
+++ b/app/views/tags/_form.html.slim
@@ -1,10 +1,7 @@
 = form_for @tag do |f|
   - if @tag.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@tag.errors.count, "error")} prohibited this tag from being saved:"
-      ul
-        - @tag.errors.full_messages.each do |message|
-          li = message
+    - @tag.errors.full_messages.each do |message|
+      div.alert-box.alert = message
 
   .field
     = f.label :name
