--- a/app/views/words/_form.html.slim
+++ b/app/views/words/_form.html.slim
@@ -1,10 +1,7 @@
 = form_for @word do |f|
   - if @word.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@word.errors.count, "error")} prohibited this word from being saved:"
-      ul
-        - @word.errors.full_messages.each do |message|
-          li = message
+    - @word.errors.full_messages.each do |message|
+      div.alert-box.alert = message
 
   .field
     = f.label :english
