--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,6 +33,8 @@ html lang="en"
               a href=words_path Words
             li
               a href=tags_path Tags
+            li
+              a href=new_study_path Study
 
     div.row
       - flash.each do |name, msg|
