--- a/app/views/studies/_form.html.slim
+++ b/app/views/studies/_form.html.slim
@@ -3,12 +3,12 @@
   .field
     = label_tag :tags, "Tags"
     = text_field_tag :tags
-  .field
-    = radio_button_tag :is_or, false
-    = label_tag :is_or_false, "And"
-    = radio_button_tag :is_or, true
-    = label_tag :is_or_false, "Or"
+  / .field
+  /   = radio_button_tag :is_or, false, :read_only => true
+  /   = label_tag :is_or_false, "And"
+  /   = radio_button_tag :is_or, true, :checked => true
+  /   = label_tag :is_or_false, "Or"
   .field
     = label_tag :pages
-    = text_field_tag :pages
+    = number_field_tag :pages, 1
   .actions = submit_tag 'Generate', :class => 'small button'
