Rename Study to Practice + add specs for Exercice

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,7 +34,7 @@ html lang="en"
             li
               a href=tags_path Tags
             li
-              a href=new_study_path Study
+              a href=new_practice_path Practice
 
     div.row
       - flash.each do |name, msg|
