--- a/app/views/practices/create.html.slim
+++ b/app/views/practices/create.html.slim
@@ -4,7 +4,7 @@ html lang="en"
     meta charset="utf-8"
 
   body 
-    h1 Study Sheet
+    h1 Practice Sheet
 
     - for row in @word_grid do
       div.row
