Add test sheet generator

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,6 +35,8 @@ html lang="en"
               a href=tags_path Tags
             li
               a href=new_practice_path Practice
+            li
+              a href=new_test_path Test
 
     div.row
       - flash.each do |name, msg|
