Rename Test to Guess + add specs

--- a/app/views/guesses/create.html.slim
+++ b/app/views/guesses/create.html.slim
@@ -4,9 +4,9 @@ html lang="en"
     meta charset="utf-8"
 
   body 
-    / Test page
+    / Guess page
     div style="width:190mmm; height:267mm; overflow:hidden"
-      h2 Test Sheet #{Date.today.to_s}
+      h2 Guess Sheet #{Date.today.to_s}
       h4 Translate #{@from} to #{@to}
 
       div
@@ -16,7 +16,7 @@ html lang="en"
 
     / Solution page
     div style="width:190mmm; height:267mm; overflow:hidden"
-      h2 Test Sheet #{Date.today.to_s}
+      h2 Guess Sheet #{Date.today.to_s}
       h4 Solutions
 
       div
