--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -36,7 +36,7 @@ html lang="en"
             li
               a href=new_practice_path Practice
             li
-              a href=new_test_path Test
+              a href=new_guess_path Guess
 
     div.row
       - flash.each do |name, msg|
