--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,6 +24,13 @@ html lang="en"
       - if current_user
         section.top-bar-section
           ul.right
+            li.has-form
+              = form_tag(search_word_path) do
+                div.row.collapse
+                  div.large-8.small-9.columns
+                    = text_field_tag 'search', nil, placeholder: 'Find word'
+                  div.large-4.small-3.columns
+                    = submit_tag 'Search', :class => 'button expand'
             li
               = link_to('Profile', edit_user_registration_path)
             li
