--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html lang="en"
   	title Kotoba no Purobaida
 
   	= stylesheet_link_tag "application"
-  	= javascript_include_tag "vendor/custom.modernizr"
+  	/ = javascript_include_tag "vendor/custom.modernizr"
     = csrf_meta_tags
 
   body
