Make quizzes look better

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -42,6 +42,8 @@ html lang="en"
               a href=new_practice_path Practice
             li
               a href=new_guess_path Guess
+            li
+              a href=quizzes_path Quiz
 
     div.row
       - flash.each do |name, msg|
