--- a/app/views/quizzes/_form.html.slim
+++ b/app/views/quizzes/_form.html.slim
@@ -3,4 +3,4 @@
   .field
     = f.label :questions_count
     = f.text_field :questions_count
-  .actions = f.submit 'Save', :class => 'small button'
+  .actions = f.submit 'Start', :class => 'small button'
