--- a/app/views/quizzes/new.html.slim
+++ b/app/views/quizzes/new.html.slim
@@ -1,5 +1,6 @@
-h1 New quiz
+div.large-12.columns
+  h1 New quiz
 
-== render 'form'
+  == render 'form'
 
-= link_to 'Back', root_path
+  = link_to 'Back', quizzes_path
