Disable turbolinks for Heroku

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,7 +15,7 @@ html lang="en"
   	/ = javascript_include_tag "vendor/custom.modernizr"
     = csrf_meta_tags
 
-  body
+  body [data-no-turbolink]
     nav.top-bar
       ul.title-area
         li.name
