--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,42 +12,16 @@ html lang="en"
   	title Kotoba no Purobaida
 
   	= stylesheet_link_tag "application"
-  	/ = javascript_include_tag "vendor/custom.modernizr"
+  	= javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
 
-  body [data-no-turbolink]
-    nav.top-bar
-      ul.title-area
-        li.name
-          h1 
-            a href=root_path Kotoba no Purobaida
-      - if current_user
-        section.top-bar-section
-          ul.right
-            li.has-form
-              = form_tag(search_word_path) do
-                div.row.collapse
-                  div.large-8.small-9.columns
-                    = text_field_tag 'search', nil, placeholder: 'Find word'
-                  div.large-4.small-3.columns
-                    = submit_tag 'Search', :class => 'button expand'
-            li
-              = link_to('Logout', destroy_user_session_path, :method => :delete)
-          ul.left
-            li
-              a href=words_path Words
-            li
-              a href=tags_path Tags
-            li
-              a href=new_practice_path Practice
-            li
-              a href=new_guess_path Guess
-            li
-              a href=quizzes_path Quiz
+  body
+    = render 'layouts/navigation'
 
     div.row
       - flash.each do |name, msg|
         = content_tag :div, msg, class: "#{name} alert-box"
-      = yield
+      div.large-12.columns
+        = yield
 
     = javascript_include_tag "application"
